# rusty-os

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  bors.toml
.cargo/: config.toml
.github/workflows/: CODEOWNERS  rust.yml
docs/: design.md  quick_start_guide.md  rusty-os.md
src/: arm64.rs  interrupts.rs  kernel.rs  lib.rs  linked_list.rs  list.rs  main.rs  queue.rs  riscv.rs  serial.rs  tasks.rs  timers.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
