[package]
name = "rusty-os"
version = "1.0.0"
authors = ["Roberto Valenzuela <valenzuelarober@gmail.com>"]
edition = "2018"
description = "Rusty-OS is a simple kernel for embedded systems written in Rust"
documentation = "https://github.com/roemvaar/rusty-os/tree/main/docs"
readme = "README.md"
repository = "https://github.com/roemvaar/rusty-os/tree/main/src"
homepage = "https://github.com/roemvaar/rusty-os"
license = "MIT"
keywords = ["kernel", "rtos"]
categories = ["embedded"]

[dependencies]
bootloader = "0.9.23"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"