[package]
name = "rusty-os"
version = "1.0.0"
authors = ["Roberto Valenzuela <valenzuelarober@gmail.com>"]
edition = "2018"
description = "Rusty-OS is a simple kernel for embedded systems written in Rust"
documentation = "https://github.com/roemvaar/rusty-os/tree/main/docs"
readme = "README.md"
repository = "https://github.com/roemvaar/rusty-os/tree/main/src"
homepage = "https://github.com/roemvaar/rusty-os"
license = "MIT"
keywords = ["kernel", "rtos"]
categories = ["embedded"]

[dependencies]
bootloader = "0.9.23"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
